--- a/MainCode/idk whatto call.html
+++ b/MainCode/idk whatto call.html
@@ -84,10 +84,10 @@
                 <br>
                 <a href="https://robloxarsenal.fandom.com/wiki/Makarov" title="Makarov">Makarov</a>
             </div>
-            <div style="margin: 5px 5px;" id="P250">
-                <img src="../GunImg/P250IconHD.png" alt="">
+            <div style="margin: 5px 5px;" id="Hush Puppy">
+                <img src="../GunImg/HushPuppyIconHD.png" alt="">
                 <br>
-                <a href="https://robloxarsenal.fandom.com/wiki/P250" title="P250">P250</a>
+                <a href="https://github.com/doratina/mindx.git" title="P250">Hush puppy</a>
             </div>
             <div style="margin: 5px 5px;" id="P250">
                 <img src="../GunImg/P250IconHD.png" alt="">
