--- a/MainCode/idk whatto call.html
+++ b/MainCode/idk whatto call.html
@@ -87,22 +87,22 @@
             <div style="margin: 5px 5px;" id="Hush Puppy">
                 <img src="../GunImg/HushPuppyIconHD.png" alt="">
                 <br>
-                <a href="https://github.com/doratina/mindx.git" title="P250">Hush puppy</a>
+                <a href="https://github.com/doratina/mindx.git" title="Hush puppy">Hush puppy</a>
             </div>
-            <div style="margin: 5px 5px;" id="P250">
-                <img src="../GunImg/P250IconHD.png" alt="">
+            <div style="margin: 5px 5px;" id="Windicator">
+                <img src="../GunImg/WindicatorIconHD.png" alt="">
                 <br>
-                <a href="https://robloxarsenal.fandom.com/wiki/P250" title="P250">P250</a>
+                <a href="https://robloxarsenal.fandom.com/wiki/Windicator" title="Windicator">Windicator</a>
             </div>
-            <div style="margin: 5px 5px;" id="P250">
-                <img src="../GunImg/P250IconHD.png" alt="">
+            <div style="margin: 5px 5px;" id="Peacemaker">
+                <img src="../GunImg/PeacemakerIconHD.png" alt="">
                 <br>
-                <a href="https://robloxarsenal.fandom.com/wiki/P250" title="P250">P250</a>
+                <a href="https://robloxarsenal.fandom.com/wiki/Peacemaker" title="Peacemaker">Peacemaker</a>
             </div>
-            <div style="margin: 5px 5px;" id="P250">
-                <img src="../GunImg/P250IconHD.png" alt="">
+            <div style="margin: 5px 5px;" id="Dual volcanics">
+                <img src="../GunImg/DualVolcanicsIconHD.png" alt="">
                 <br>
-                <a href="https://robloxarsenal.fandom.com/wiki/P250" title="P250">P250</a>
+                <a href="https://robloxarsenal.fandom.com/wiki/Dual_Volcanics" title="Dual Volcanics">Dual Vocalnics</a>
             </div>
             <div style="margin: 5px 5px;" id="P250">
                 <img src="../GunImg/P250IconHD.png" alt="">
