--- a/MainCode/idk whatto call.html
+++ b/MainCode/idk whatto call.html
@@ -87,7 +87,7 @@
             <div style="margin: 5px 5px;" id="Hush Puppy">
                 <img src="../GunImg/HushPuppyIconHD.png" alt="">
                 <br>
-                <a href="https://github.com/doratina/mindx.git" title="Hush puppy">Hush puppy</a>
+                <a href="https://robloxarsenal.fandom.com/wiki/Hush_Puppy" title="Hush puppy">Hush puppy</a>
             </div>
             <div style="margin: 5px 5px;" id="Windicator">
                 <img src="../GunImg/WindicatorIconHD.png" alt="">
@@ -104,15 +104,15 @@
                 <br>
                 <a href="https://robloxarsenal.fandom.com/wiki/Dual_Volcanics" title="Dual Volcanics">Dual Vocalnics</a>
             </div>
-            <div style="margin: 5px 5px;" id="P250">
-                <img src="../GunImg/P250IconHD.png" alt="">
+            <div style="margin: 5px 5px;" id="Peppergun">
+                <img src="../GunImg/PeppergunIconHD.png" alt="">
                 <br>
-                <a href="https://robloxarsenal.fandom.com/wiki/P250" title="P250">P250</a>
+                <a href="https://robloxarsenal.fandom.com/wiki/Peppergun" title="Peppergun">Peppergun</a>
             </div>
-            <div style="margin: 5px 5px;" id="P250">
-                <img src="../GunImg/P250IconHD.png" alt="">
+            <div style="margin: 5px 5px;" id="Luger">
+                <img src="../GunImg/LugerIconHD.png" alt="">
                 <br>
-                <a href="https://robloxarsenal.fandom.com/wiki/P250" title="P250">P250</a>
+                <a href="https://robloxarsenal.fandom.com/wiki/Luger" title="Luger">Luger</a>
             </div>
 
 </body>
