--- a/MainCode/idk whatto call.html
+++ b/MainCode/idk whatto call.html
@@ -114,6 +114,71 @@
                 <br>
                 <a href="https://robloxarsenal.fandom.com/wiki/Luger" title="Luger">Luger</a>
             </div>
+            <div style="margin: 5px 5px;" id="Webley">
+                <img src="../GunImg/WebleyIconHD.png" alt="">
+                <br>
+                <a href="https://robloxarsenal.fandom.com/wiki/Webley" title="Webley">Webley</a>
+            </div>
+            <div style="margin: 5px 5px;" id="Handcannon">
+                <img src="../GunImg/HandcannonIconHD.png" alt="">
+                <br>
+                <a href="https://robloxarsenal.fandom.com/wiki/Handcannon" title="Handcannon">Handcannon</a>
+            </div>
+            <div style="margin: 5px 5px;" id="Little Tom">
+                <img src="../GunImg/LittleTomIconHD.png" alt="">
+                <br>
+                <a href="https://robloxarsenal.fandom.com/wiki/Little_Tom" title="Little Tom">Little Tom</a>
+            </div>
+            <div style="margin: 5px 5px;" id="PRISMAS">
+                <img src="../GunImg/PRISMASIconHD.png" alt="">
+                <br>
+                <a href="https://robloxarsenal.fandom.com/wiki/PRISMAS" title="PRISMAS">PRISMAS</a>
+            </div>
+            <div style="margin: 5px 5px;" id="Electric Revoler">
+                <img src="../GunImg/ElectricRevolverIconHD.png" alt="">
+                <br>
+                <a href="https://robloxarsenal.fandom.com/wiki/Electric_Revolver" title="Electric_Revolver">Electric Revoler</a>
+            </div>
+            <div style="margin: 5px 5px;" id="Kolibri">
+                <img src="../GunImg/Kolibri2321.png" alt="">
+                <br>
+                <a href="https://robloxarsenal.fandom.com/wiki/Kolibri" title="Kolibri">Kolibri</a>
+            </div>
+            <div style="margin: 5px 5px;" id="Maxim-9">
+                <img src="../GunImg/Maxim9IconHD.png" alt="">
+                <br>
+                <a href="https://robloxarsenal.fandom.com/wiki/Maxim-9" title="Maxim-9">Maxim-9</a>
+            </div>
+            <div style="margin: 5px 5px;" id="Literal Gun">
+                <img src="../GunImg/LiteralGunIconHD.png" alt="">
+                <br>
+                <a href="https://robloxarsenal.fandom.com/wiki/Literal_Gun" title="Literal Gun">Literal Gun</a>
+            </div>
+            <div style="margin: 5px 5px;" id="Origami Gun">
+                <img src="../GunImg/OrigamiGunIconHD.png" alt="">
+                <br>
+                <a href="https://robloxarsenal.fandom.com/wiki/Origami_Gun" title="Origami Gun">Origami Gun</a>
+            </div>
+            <div style="margin: 5px 5px;" id="Falkor">
+                <img src="../GunImg/FalkorIconHD.png" alt="">
+                <br>
+                <a href="https://robloxarsenal.fandom.com/wiki/Falkor" title="Falkor">Falkor</a>
+            </div>
+            <div style="margin: 5px 5px;" id="Pathbringer">
+                <img src="../GunImg/PathbringerIcon.png" alt="">
+                <br>
+                <a href="https://robloxarsenal.fandom.com/wiki/Pathbringer" title="Pathbringer">Pathbringer</a>
+            </div>
+            <div style="margin: 5px 5px;" id="Soul Pistol">
+                <img src="../GunImg/" alt="oof">
+                <br>
+                <a href="https://robloxarsenal.fandom.com/wiki/Soul_Pistol" title="Soul Pistol">Soul Pistol</a>
+            </div>
+            <div style="margin: 5px 5px;" id="Luger">
+                <img src="../GunImg/LugerIconHD.png" alt="">
+                <br>
+                <a href="https://robloxarsenal.fandom.com/wiki/Luger" title="Luger">Luger</a>
+            </div>
 
 </body>
 
