--- a/MainCode/idk whatto call.html
+++ b/MainCode/idk whatto call.html
@@ -20,10 +20,16 @@
         <a class="a-nav" href="#">VIDEOS</a>
     </div>
     <!-- Chỗ tôi code phần chính -->
-    <div
-        style="background-color: #222426; color: rgb(253, 238, 214); margin: 90px 10% 0 10%; padding: 10px; ">
-        <h1>Arsenal Weapons Hub</h1>
-        <h3>Pistols</h3>
+    <div style="background-color: #222426; color: rgb(253, 238, 214); margin: 90px 10% 0 10%; padding: 10px; ">
+        <div style="text-align: center;">
+            <h1>Arsenal Weapons Hub</h1>
+            <h3>Hub for all of the Arsenal weapon pages. 138 weapons are used in all modes.</h3>
+            <h3>Weapon names in <span style="color: green;">green</span> are exclusive to ROLVe staff.</h3>
+            <h3>Weapon names in <span style="color: red;">red</span> are weapons that have been removed from the game.
+            </h3>
+            <h3></h3>
+            <h1>Pistols</h1>
+        </div>
         <div style="display: flex; flex-wrap: wrap;">
             <div style="margin: 5px 5px;" id="P250">
                 <img src="../GunImg/P250IconHD.png" alt="">
@@ -67,7 +73,7 @@
                 <a href="https://robloxarsenal.fandom.com/wiki/Hi-Power" title="Hi-power">
                     <Hi-power>Hi-power</Hi-power>
                 </a>
-            </div>  
+            </div>
 
             <div style="margin: 5px 5px;" id="M9">
                 <img src="../GunImg/M9IconHD.png" alt="">
@@ -137,7 +143,8 @@
             <div style="margin: 5px 5px;" id="Electric Revoler">
                 <img src="../GunImg/ElectricRevolverIconHD.png" alt="">
                 <br>
-                <a href="https://robloxarsenal.fandom.com/wiki/Electric_Revolver" title="Electric_Revolver">Electric Revoler</a>
+                <a href="https://robloxarsenal.fandom.com/wiki/Electric_Revolver" title="Electric_Revolver">Electric
+                    Revoler</a>
             </div>
             <div style="margin: 5px 5px;" id="Kolibri">
                 <img src="../GunImg/Kolibri2321.png" alt="">
@@ -170,16 +177,32 @@
                 <a href="https://robloxarsenal.fandom.com/wiki/Pathbringer" title="Pathbringer">Pathbringer</a>
             </div>
             <div style="margin: 5px 5px;" id="Soul Pistol">
-                <img src="../GunImg/" alt="oof">
+                <img src="https://static.wikia.nocookie.net/robloxarsenal/images/3/3e/SoulPistolIconHD.png/revision/latest/scale-to-width-down/85?cb=20201029130253" alt="oof">
                 <br>
                 <a href="https://robloxarsenal.fandom.com/wiki/Soul_Pistol" title="Soul Pistol">Soul Pistol</a>
             </div>
-            <div style="margin: 5px 5px;" id="Luger">
-                <img src="../GunImg/LugerIconHD.png" alt="">
+            <div style="margin: 5px 5px;" id="Golden Creagle">
+                <img src="../GunImg/GoldenCreagleIcon.png" alt="">
                 <br>
-                <a href="https://robloxarsenal.fandom.com/wiki/Luger" title="Luger">Luger</a>
+                <a href="https://robloxarsenal.fandom.com/wiki/Golden_Creagle" title="Golden Creagle"><span
+                        style="color: green;">Golden Creagle</span></a>
+            </div>
+            <div style="margin: 5px 5px;" id="Creagle">
+                <img src="../GunImg/Creagleicon.png" alt="">
+                <br>
+                <a href="https://robloxarsenal.fandom.com/wiki/Creagle" title="Creagle"><span
+                        style="color: red;">Creagle</span></a>
             </div>
 
+        </div>
+        <h1 style="text-align: center;">SMGs</h1>
+        <div style="display: flex; flex-wrap: wrap;">
+        <div style="margin: 5px 5px;" id="MAC-10">
+            <img src="https://static.wikia.nocookie.net/robloxarsenal/images/b/b8/MAC10IconHD.png/revision/latest/scale-to-width-down/85?cb=20191224044550" alt="">
+            <br>
+            <a href="https://robloxarsenal.fandom.com/wiki/MAC-10">MAC-10</a>
+        </div>
+        </div>
 </body>
 
 </html>
