Lão Hạc ăn bả chó được làm từ "Cậu Vàng"

--- a/MainCode/idk whatto call.html
+++ b/MainCode/idk whatto call.html
@@ -202,7 +202,105 @@
             <br>
             <a href="https://robloxarsenal.fandom.com/wiki/MAC-10">MAC-10</a>
         </div>
+        <div style="margin: 5px 5px;" id="P90">
+            <img src="https://static.wikia.nocookie.net/robloxarsenal/images/5/59/P90IconHD.png/revision/latest/scale-to-width-down/85?cb=20191223210653" alt="">
+            <br>
+            <a href="https://robloxarsenal.fandom.com/wiki/P90">P90</a>
         </div>
+        <div style="margin: 5px 5px;" id="UMP-45">
+            <img src="https://static.wikia.nocookie.net/robloxarsenal/images/0/0d/UMP45IconHD.png/revision/latest/scale-to-width-down/85?cb=20191224044450" alt="">
+            <br>
+            <a href="https://robloxarsenal.fandom.com/wiki/UMP-45">UMP-45</a>
+        </div>
+        <div style="margin: 5px 5px;" id="PP-Bizon">
+            <img src="https://static.wikia.nocookie.net/robloxarsenal/images/5/5c/BizonIconHD.png/revision/latest/scale-to-width-down/85?cb=20200604115525" alt="">
+            <br>
+            <a href="https://robloxarsenal.fandom.com/wiki/PP-Bizon">PP-Bizon</a>
+        </div>
+        <div style="margin: 5px 5px;" id="MP7">
+            <img src="https://static.wikia.nocookie.net/robloxarsenal/images/0/0b/MP7IconHD.png/revision/latest/scale-to-width-down/85?cb=20191224030054" alt="">
+            <br>
+            <a href="https://robloxarsenal.fandom.com/wiki/MP7">MP7</a>
+        </div>
+        <div style="margin: 5px 5px;" id="MP5K">
+            <img src="https://static.wikia.nocookie.net/robloxarsenal/images/5/52/MP5KIconHD.png/revision/latest/scale-to-width-down/85?cb=20191224044520" alt="">
+            <br>
+            <a href="https://robloxarsenal.fandom.com/wiki/MP5K">MP5K</a>
+        </div>
+        <div style="margin: 5px 5px;" id="MP9-S">
+            <img src="https://static.wikia.nocookie.net/robloxarsenal/images/d/d2/MP9SIconHD.png/revision/latest/scale-to-width-down/85?cb=20191224010157" alt="">
+            <br>
+            <a href="https://robloxarsenal.fandom.com/wiki/MP9-S">MP9-S</a>
+        </div>
+        <div style="margin: 5px 5px;" id="Grease Gun">
+            <img src="https://static.wikia.nocookie.net/robloxarsenal/images/c/cb/GreaseGunIconHD.png/revision/latest/scale-to-width-down/85?cb=20191224025744" alt="">
+            <br>
+            <a href="https://robloxarsenal.fandom.com/wiki/Grease_Gun">Grease Gun</a>
+        </div>
+        <div style="margin: 5px 5px;" id="Uzi">
+            <img src="https://static.wikia.nocookie.net/robloxarsenal/images/8/8a/UziIconHD.png/revision/latest/scale-to-width-down/85?cb=20191224005526" alt="">
+            <br>
+            <a href="https://robloxarsenal.fandom.com/wiki/Uzi">Uzi</a>
+        </div>
+        <div style="margin: 5px 5px;" id="Tommy Gun">
+            <img src="https://static.wikia.nocookie.net/robloxarsenal/images/0/0b/TommyGunIconHD.png/revision/latest/scale-to-width-down/85?cb=20191224034909" alt="">
+            <br>
+            <a href="https://robloxarsenal.fandom.com/wiki/Tommy_Gun">Tommy Gun</a>
+        </div>
+        <div style="margin: 5px 5px;" id="MAT-49">
+            <img src="https://static.wikia.nocookie.net/robloxarsenal/images/9/90/MAT49IconHD.png/revision/latest/scale-to-width-down/85?cb=20191223211600" alt="">
+            <br>
+            <a href="https://robloxarsenal.fandom.com/wiki/MAT-49">MAT-49</a>
+        </div>
+        <div style="margin: 5px 5px;" id="STEN">
+            <img src="https://static.wikia.nocookie.net/robloxarsenal/images/c/c3/STENIconHD.png/revision/latest/scale-to-width-down/85?cb=20191224034638" alt="">
+            <br>
+            <a href="https://robloxarsenal.fandom.com/wiki/STEN">STEN</a>
+        </div>
+        <div style="margin: 5px 5px;" id="Z80">
+            <img src="https://static.wikia.nocookie.net/robloxarsenal/images/c/cb/Z80IconNewHD.png/revision/latest/scale-to-width-down/85?cb=20200621104139" alt="">
+            <br>
+            <a href="https://robloxarsenal.fandom.com/wiki/Z80">Z80</a>
+        </div>
+        <div style="margin: 5px 5px;" id="PPSH">
+            <img src="https://static.wikia.nocookie.net/robloxarsenal/images/3/32/PPSHIconHD.png/revision/latest/scale-to-width-down/85?cb=20191223211242" alt="">
+            <br>
+            <a href="https://robloxarsenal.fandom.com/wiki/PPSH">PPSH</a>
+        </div>
+        <div style="margin: 5px 5px;" id="Micro Uzis">
+            <img src="https://static.wikia.nocookie.net/robloxarsenal/images/f/f0/MicroUzisIconHD.png/revision/latest/scale-to-width-down/85?cb=20191223211816" alt="">
+            <br>
+            <a href="https://robloxarsenal.fandom.com/wiki/Micro_Uzis">Micro Uzis</a>
+        </div>
+        <div style="margin: 5px 5px;" id="Mauser Carbine">
+            <img src="https://static.wikia.nocookie.net/robloxarsenal/images/3/39/MauserCarbineIconHD.png/revision/latest/scale-to-width-down/85?cb=20191223211202" alt="">
+            <br>
+            <a href="https://robloxarsenal.fandom.com/wiki/Mauser_Carbine">Mauser Carbine</a>
+        </div>
+        <div style="margin: 5px 5px;" id="FMG-9">
+            <img src="https://static.wikia.nocookie.net/robloxarsenal/images/3/3e/FMG9IconHD.png/revision/latest/scale-to-width-down/85?cb=20200523161039" alt="">
+            <br>
+            <a href="https://robloxarsenal.fandom.com/wiki/FMG-9">FMG-9</a>
+        </div>
+        <div style="margin: 5px 5px;" id="BH10">
+            <img src="https://static.wikia.nocookie.net/robloxarsenal/images/2/21/BH10IconHD.png/revision/latest/scale-to-width-down/85?cb=20200930191332" alt="">
+            <br>
+            <a href="https://robloxarsenal.fandom.com/wiki/BH10">BH10</a>
+        </div>
+        <div style="margin: 5px 5px;" id="Vector">
+            <img src="https://static.wikia.nocookie.net/robloxarsenal/images/0/0d/VectorIconHD.png/revision/latest/scale-to-width-down/85?cb=20200930191102" alt="">
+            <br>
+            <a href="https://robloxarsenal.fandom.com/wiki/Vector">Vector</a>
+        </div>
+       
+        <div style="margin: 5px 5px;" id="">
+            <img src="" alt="">
+            <br>
+            <a href=""></a>
+        </div>
+    </div>
+<h1 style="text-align: center;">Shotguns</h1>
+<div style="display: flex; flex-wrap: wrap;">
 </body>
 
 </html>
