q ewihwrhewrjkqwejuqweuheehurwiuerweuhrefhufehfeuhfuefhuehfeuhfeuhfeufeuhfuehfefuehufehuheuhuehuhuhauo ihjpijpiovjpojqpopobjqpoikpoqijp,qoij OF J oij [OIF Jp F{ioj f[pi {FIP{POU { PIfpOO I Fjpoi pao ioi O I O Io I OI OOIOIOIOIOIOIOIIOIOIOIOIOIOIOIOioioioioiLOLOLOLOLLOLlolollololololOLOLLO lO lO LO lo lOL o LoL o lOL oal oL OL LO LLO LO lolo L LlolOLo lloL Ol ol OL OL OLOL L oL OL OL OL OL OL LOL OLL OL L OL OLOL ol o l olO lO LA olOL  LL L OaO ol LA  laola OLA olo Lo la llOl lo ao lLO A lOL OL O lO lOl Ol OL OL ol OL ol o Lo lol ololol l ol L OL  LOL  LO L LOOLOl Ol Ol Ol Lo LOL oL l Ol Olo LOL oL ol LOL OL OL lO ol OLO lol ok lo ol o l OL oL ol oL o ok L ol  ok OK O l oO k OK ok oK oK o LO LO LO LoLol oL OLoL oLOl OL  lo O L  OL   LOLO  L OLO   LO L  O L   OL   O L  LolO   lO l  LO l  lO l  l oL  L OL   lO L  LO L L O l  l l  lO l  ll  L l l llll L l lL L llllllllllllllllllllllllllllllllllllllllllllllllllllllll

--- a/MainCode/idk whatto call.html
+++ b/MainCode/idk whatto call.html
@@ -301,6 +301,52 @@
     </div>
 <h1 style="text-align: center;">Shotguns</h1>
 <div style="display: flex; flex-wrap: wrap;">
+    <div style="margin: 5px 5px;" id="XM1014">
+        <img src="https://static.wikia.nocookie.net/robloxarsenal/images/4/43/XM1014IconHD.png/revision/latest/scale-to-width-down/85?cb=20191224021707" alt="">
+        <br>
+        <a href="https://robloxarsenal.fandom.com/wiki/XM1014">XM1014</a>
+    </div>
+    <div style="margin: 5px 5px;" id="">
+        <img src="" alt="">
+        <br>
+        <a href=""></a>
+    </div>
+    <div style="margin: 5px 5px;" id="">
+        <img src="" alt="">
+        <br>
+        <a href=""></a>
+    </div>
+    <div style="margin: 5px 5px;" id="">
+        <img src="" alt="">
+        <br>
+        <a href=""></a>
+    </div>
+    <div style="margin: 5px 5px;" id="">
+        <img src="" alt="">
+        <br>
+        <a href=""></a>
+    </div>
+    <div style="margin: 5px 5px;" id="">
+        <img src="" alt="">
+        <br>
+        <a href=""></a>
+    </div>
+    <div style="margin: 5px 5px;" id="">
+        <img src="" alt="">
+        <br>
+        <a href=""></a>
+    </div>
+    <div style="margin: 5px 5px;" id="">
+        <img src="" alt="">
+        <br>
+        <a href=""></a>
+    </div>
+    <div style="margin: 5px 5px;" id="">
+        <img src="" alt="">
+        <br>
+        <a href=""></a>
+    </div>
+    </div>
 </body>
 
 </html>
