ư ư ư ư ư ư ư ư ư ư ư uuw ư ư ư ưu ưu ưu ưu ư ư ư ưu ưu  uw ư u ưu uuw uuwu uuwuwuwu uuw ưu wu uuwuwwuw uuwuwuw ư uw iww uuw uuw uuw uuw uuw ưu uuw uuw uuw uuw uuw uuw wuuwu ư ư ư ư ưu uuwu uuw uuw ưu ưu ưu ưu ưu ưu ưu ưu ưu ưu ưu ưu ư ưu ư ưu ư ư ư ư ư ư ư ư ư ư ư uwwwwwwwwwwwwwwwwwww

--- a/MainCode/idk whatto call.html
+++ b/MainCode/idk whatto call.html
@@ -301,51 +301,84 @@
     </div>
 <h1 style="text-align: center;">Shotguns</h1>
 <div style="display: flex; flex-wrap: wrap;">
-    <div style="margin: 5px 5px;" id="XM1014">
-        <img src="https://static.wikia.nocookie.net/robloxarsenal/images/4/43/XM1014IconHD.png/revision/latest/scale-to-width-down/85?cb=20191224021707" alt="">
-        <br>
-        <a href="https://robloxarsenal.fandom.com/wiki/XM1014">XM1014</a>
-    </div>
-    <div style="margin: 5px 5px;" id="">
-        <img src="" alt="">
-        <br>
-        <a href=""></a>
-    </div>
-    <div style="margin: 5px 5px;" id="">
-        <img src="" alt="">
-        <br>
-        <a href=""></a>
-    </div>
-    <div style="margin: 5px 5px;" id="">
-        <img src="" alt="">
-        <br>
-        <a href=""></a>
-    </div>
-    <div style="margin: 5px 5px;" id="">
-        <img src="" alt="">
-        <br>
-        <a href=""></a>
-    </div>
-    <div style="margin: 5px 5px;" id="">
-        <img src="" alt="">
-        <br>
-        <a href=""></a>
-    </div>
-    <div style="margin: 5px 5px;" id="">
-        <img src="" alt="">
-        <br>
-        <a href=""></a>
-    </div>
-    <div style="margin: 5px 5px;" id="">
-        <img src="" alt="">
-        <br>
-        <a href=""></a>
-    </div>
-    <div style="margin: 5px 5px;" id="">
-        <img src="" alt="">
-        <br>
-        <a href=""></a>
-    </div>
+    <div style="display: flex; flex-wrap: wrap;">
+        <div style="margin: 5px 5px;" id="XM1014">
+            <img src="../GunImg/XM1014IconHD.png" alt="oof">
+            <br>
+            <a href="https://robloxarsenal.fandom.com/wiki/XM1014" title="XM1014">XM1014</a>
+        </div>
+            <div style="margin: 5px 5px;" id="MAG-7">
+                <img src="../GunImg/MAG7IconHD.png" alt="oof">
+                <br>
+                <a href="https://robloxarsenal.fandom.com/wiki/MAG-7" title="MAG-7">MAG-7</a>
+            </div>
+            <div style="margin: 5px 5px;" id="Lever Shotgun">
+                <img src="../GunImg/LeverShotgunIconHD.png" alt="oof">
+                <br>
+                <a href="https://robloxarsenal.fandom.com/wiki/Lever Shotgun" title="Lever Shotgun">Lever Shotgun</a>
+            </div>   
+            <div style="margin: 5px 5px;" id="DB Shotgun">
+                <img src="../GunImg/DBShotgunIconHD.png" alt="oof">
+                <br>
+                <a href="https://robloxarsenal.fandom.com/wiki/DB Shotgun" title="DB Shotgun">DB Shotgun</a>
+            </div>  
+            <div style="margin: 5px 5px;" id="SPAS 12">
+                <img src="../GunImg/SPAS12IconHD.png" alt="oof">
+                <br>
+                <a href="https://robloxarsenal.fandom.com/wiki/SPAS 12" title="SPAS 12"><span
+                    style="color: green;">SPAS 12</span></a>
+            </div>
+            <div style="margin: 5px 5px;" id="Pump Shotgun">
+                <img src="../GunImg/PumpShotgunIconHD.png" alt="oof">
+                <br>
+                <a href="https://robloxarsenal.fandom.com/wiki/Pump Shotgun" title="Pump Shotgun">Pump Shotgun</a>
+            </div>
+            <div style="margin: 5px 5px;" id="Trench Gun">
+                <img src="../GunImg/TrenchGunIconHD.png" alt="oof">
+                <br>
+                <a href="https://robloxarsenal.fandom.com/wiki/Trench Gun" title="Trench Gun">Trench Gun</a>
+            </div>
+            <div style="margin: 5px 5px;" id="Calico">
+                <img src="../GunImg/CalicoIconHD.png" alt="oof">
+                <br>
+                <a href="https://robloxarsenal.fandom.com/wiki/Calico" title="Calico">Calico</a>
+            </div>
+            <div style="margin: 5px 5px;" id="Mossberg 500">
+                <img src="../GunImg/Mossberg500IconHD.png" alt="oof">
+                <br>
+                <a href="https://robloxarsenal.fandom.com/wiki/Mossberg 500" title="Mossberg 500">Mossberg 500</a>
+            </div>
+            <div style="margin: 5px 5px;" id="R800">
+                <img src="../GunImg/R800IconHD.png" alt="oof">
+                <br>
+                <a href="https://robloxarsenal.fandom.com/wiki/R800" title="R800">R800</a>
+            </div>   
+            <div style="margin: 5px 5px;" id="AA12">
+                <img src="../GunImg/AA12IconHD.png" alt="oof">
+                <br>
+                <a href="https://robloxarsenal.fandom.com/wiki/AA12" title="AA12">AA12</a>
+            </div>   
+            <div style="margin: 5px 5px;" id="TOZ-106">
+                <img src="../GunImg/TOZ106IconHD.png" alt="oof">
+                <br>
+                <a href="https://robloxarsenal.fandom.com/wiki/TOZ-106" title="TOZ-106">TOZ-106</a>
+            </div>   
+            <div style="margin: 5px 5px;" id="Inertial Shotgun">
+                <img src="../GunImg/Inertial2.png" alt="oof">
+                <br>
+                <a href="https://robloxarsenal.fandom.com/wiki/Inertial Shotgun" title="Inertial Shotgun">Inertial Shotgun</a>
+            </div>   
+            <div style="margin: 5px 5px;" id="Tavor">
+                <img src="../GunImg/TavorIconHD.png" alt="oof">
+                <br>
+                <a href="https://robloxarsenal.fandom.com/wiki/Tavor" title="Tavor">Tavor</a>
+            </div> 
+            <div style="margin: 5px 5px;" id="Dual Shotguns">
+                <img src="../GunImg/DualShotgunsIconHD.png" alt="oof">
+                <br>
+                <a href="https://robloxarsenal.fandom.com/wiki/Dual Shotguns" title="Dual Shotguns">Dual Shotguns</a>
+            </div> 
+        </div>
     </div>
 </body>
 
